[package]
name = "kubevirt-project-linter"
version = "0.1.0"
edition = "2021"
description = "Static analysis MCP server for kubevirt-ui: lint specs, fixture map, env vars, setup rules, API/UI parity"
rust-version = "1.75"

[[bin]]
name = "kubevirt-project-linter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
walkdir = "2"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
